[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["HENRYMARTIN5 <s9028524@milwaukee.k12.wi.us>"]
description = ""
name = "newsapp"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
newspaper3k = "^0.2.8"
python = "^3.7"
[tool.poetry.dev-dependencies]
